--- a/aboutme 1.html
+++ b/aboutme 1.html
@@ -7,17 +7,19 @@
 </head>
 <body>
 	<nav>
-		關於我
-		珍藏書籤
-		推薦影片
+		<ul>
+			<li>關於我</li>
+			<li>珍藏書籤</li>
+			<li>推薦影片</li>
+		</ul>		
 	</nav>
 
 	<main>
 		
 		<nav>
-			楊子青 (Tzyy-Ching Yang)  http://www1.pu.edu.tw/~tcyang
-			靜宜大學 https://www.pu.edu.tw/
-		 	 / 資訊管理學系 https://csim.pu.edu.tw/
+			<h1>楊子青 (Tzyy-Ching Yang)  http://www1.pu.edu.tw/~tcyang</h1>
+			<h2>靜宜大學 https://www.pu.edu.tw/
+		 	 / 資訊管理學系 https://csim.pu.edu.tw/</h2>
 		</nav> 	 
 
 		照片
@@ -25,10 +27,10 @@
 
 		<session>
 			<header>關於我</header>
-			職稱：靜宜大學資訊管理學系副教授
-			經歷：靜宜大學服務學習發展中心兼產業學院推動辦公室主任(2012年8月～2015年8月)
-			Tel: 04-26328001#18110
-			E-Mail: tcyang@pu.edu.tw
+			<h3>職稱：靜宜大學資訊管理學系副教授</h3>
+			<h3>經歷：靜宜大學服務學習發展中心兼產業學院推動辦公室主任(2012年8月～2015年8月)</h3>
+			<h3>Tel: 04-26328001#18110</h3>
+			<h3>E-Mail: tcyang@pu.edu.tw</h3>
 		</session>
 
 		<article>
